Bugfix/1 first block in news has text cutoff (#21)
* fix LocationsListPage re-render multiple times when filtering

* Fix first block in News has text cutoff

--- a/src/Foundation/Assets/scss/templates/pages/_blog-list.scss
+++ b/src/Foundation/Assets/scss/templates/pages/_blog-list.scss
@@ -364,10 +364,10 @@
         &--show {
             width: 100%;
             height: 500px;
-
+            overflow: hidden;
             & .card--top {
                 height: 60%;
-
+                overflow: hidden; 
                 & img {
                     width: 100%;
                     height: 100%;
